--- a/sweetwater/angular.json
+++ b/sweetwater/angular.json
@@ -101,6 +101,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "sweetwater:build:production",
+            "firebaseProject": "sweetwater-app-42701",
+            "firebaseHostingSite": "sweetwater-app-42701"
+          }
         }
       }
     }
